Problem with Alpha Channel video in Sequencer and textures #29295

Closed
opened 2011-11-16 18:03:27 +01:00 by Kassandra · 6 comments

%%%The alpha channel appears to not be working correctly for alpha channel videos in the sequencer and also on surfaces and materials. I have tested this in 2.6a r41226. Attached is RAR with example blend file for 2.49b and 2.6, and a simple alpha channel Quicktime Animation mov file, and a jpeg as a background image. In 2.49b it shows up properly, in 2.6 the alpha channel only is properly affecting AlphaOver blending for a few frames. In another file I tested, it was not properly showing the alpha channel for about 10 frames at the start and end of the file, again working perfectly in 2.49b (the alpha channel video was rendered with 2.49b as well). I also have tried with motion png in a mov container - same results.

Here are 2 youtube videos showing the problem in 2.6, and how it works correctly in 2.49b:

http://www.youtube.com/watch?v=h9b7X45SsFs - Shows the problem in viewport glsl textured and in sequencer
http://www.youtube.com/watch?v=w_ix8DR9hOY - Shorter, shows just sequencer, different alpha channel video file

Windows 7 64-bit
Phenom II x6 2.8
8GB
Radeon 6670 1GB
Blender 2.6a r41226
%%%

%%%The alpha channel appears to not be working correctly for alpha channel videos in the sequencer and also on surfaces and materials. I have tested this in 2.6a r41226. Attached is RAR with example blend file for 2.49b and 2.6, and a simple alpha channel Quicktime Animation mov file, and a jpeg as a background image. In 2.49b it shows up properly, in 2.6 the alpha channel only is properly affecting AlphaOver blending for a few frames. In another file I tested, it was not properly showing the alpha channel for about 10 frames at the start and end of the file, again working perfectly in 2.49b (the alpha channel video was rendered with 2.49b as well). I also have tried with motion png in a mov container - same results. Here are 2 youtube videos showing the problem in 2.6, and how it works correctly in 2.49b: http://www.youtube.com/watch?v=h9b7X45SsFs - Shows the problem in viewport glsl textured and in sequencer http://www.youtube.com/watch?v=w_ix8DR9hOY - Shorter, shows just sequencer, different alpha channel video file Windows 7 64-bit Phenom II x6 2.8 8GB Radeon 6670 1GB Blender 2.6a r41226 %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%AFAIR, it was a bug in swscale which used to set alpha channel incorrectly, so it's getting reassigned to 1.0 (full non-transparent) after decoding frame. It's tricky check for alpha channel of first pixel on frame (think it's bottom left corner), which describes why your video behaves in such way.
Need to check if bug still present in swscale and probably this hack could be removed.%%%

%%%AFAIR, it was a bug in swscale which used to set alpha channel incorrectly, so it's getting reassigned to 1.0 (full non-transparent) after decoding frame. It's tricky check for alpha channel of first pixel on frame (think it's bottom left corner), which describes why your video behaves in such way. Need to check if bug still present in swscale and probably this hack could be removed.%%%

%%%Kassandra, are you familiar with applying patches? I've attached possible fix in attachments here, looks like it works fine, but more tests would be welcome.%%%

%%%Kassandra, are you familiar with applying patches? I've attached possible fix in attachments here, looks like it works fine, but more tests would be welcome.%%%
Author

%%%I could give it a try maybe, I'm not a programmer though and I don't have any compilers installed or setup etc, nor have I ever used version control things, but if it wouldn't be too difficult I can give it a try and do some more experiments on the results, I use alpha video quite a lot so I'd love to try and help test :)%%%

%%%I could give it a try maybe, I'm not a programmer though and I don't have any compilers installed or setup etc, nor have I ever used version control things, but if it wouldn't be too difficult I can give it a try and do some more experiments on the results, I use alpha video quite a lot so I'd love to try and help test :)%%%

%%%Pardon for the delay. Discussed patch with Peter and think it can go into trunk.
Your issue should be resolved in svn rev42017. Thanks for the report, closing it now.%%%

%%%Pardon for the delay. Discussed patch with Peter and think it can go into trunk. Your issue should be resolved in svn rev42017. Thanks for the report, closing it now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29295
No description provided.